[gd_scene load_steps=13 format=3 uid="uid://bicgcfc1g7lw2"]

[ext_resource type="Script" uid="uid://dfjb432mi4mum" path="res://scenes/light.gd" id="1_76toy"]
[ext_resource type="Script" uid="uid://ou2lhy6du72m" path="res://scripts/4d/dimension_manager_4d.gd" id="2_8g4ke"]
[ext_resource type="PackedScene" uid="uid://dqcrq7br8jfhl" path="res://scenes/object_4d.tscn" id="3_56gwk"]
[ext_resource type="PackedScene" uid="uid://cp6vuyvhc8q7" path="res://scenes/Player_4d.tscn" id="4_ve5ok"]
[ext_resource type="PackedScene" uid="uid://cfkwef15s8ye6" path="res://scenes/dimensional_fruit.tscn" id="5_cleqw"]
[ext_resource type="PackedScene" uid="uid://bt54pnr0mbmo8" path="res://scenes/statics/box_obstacle_4d.tscn" id="6_wvb8j"]
[ext_resource type="PackedScene" uid="uid://bh8vwj3n2qk7t" path="res://scenes/infinite_floor.tscn" id="7_g8vcy"]
[ext_resource type="Script" uid="uid://caut3exbhkfrr" path="res://scripts/tester.gd" id="8_cqal4"]
[ext_resource type="Script" uid="uid://b5735vw5qn6o" path="res://scripts/4d/camera_4d_follow.gd" id="9_o3sye"]
[ext_resource type="Script" uid="uid://co36lml6hwiel" path="res://scripts/level_manager.gd" id="10_24ks5"]
[ext_resource type="PackedScene" uid="uid://chd6hcfb5m7lf" path="res://scenes/level_ui.tscn" id="11_s4es8"]

[sub_resource type="Environment" id="Environment_jyhfs"]

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jyhfs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
script = ExtResource("1_76toy")

[node name="DimensionManager" type="Node" parent="."]
script = ExtResource("2_8g4ke")
metadata/_custom_type_script = "uid://ou2lhy6du72m"

[node name="objects" type="Node3D" parent="."]

[node name="Object_4d" parent="objects" instance=ExtResource("3_56gwk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.6732464, 0)

[node name="Player_4d" parent="objects" instance=ExtResource("4_ve5ok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
move_speed = 30.0
position_4d = Vector4(0, 1, 0, 0)

[node name="DimensionalFruit" parent="objects" instance=ExtResource("5_cleqw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, 0)
required_dimension = 2
position_4d = Vector4(10, 1, 0, 3)

[node name="box_obstacle_4d" parent="objects" instance=ExtResource("6_wvb8j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0)
position_4d = Vector4(4, 0, 0, 0)
collision_radius_4d = 0.5

[node name="InfiniteFloor" parent="." instance=ExtResource("7_g8vcy")]
floor_y = 0

[node name="tester" type="Node3D" parent="."]
script = ExtResource("8_cqal4")

[node name="Camera4D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("9_o3sye")
target = NodePath("../objects/Player_4d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="controls_label" type="Label" parent="CanvasLayer"]
offset_left = 847.0
offset_top = 391.0
offset_right = 1152.0
offset_bottom = 648.0
text = "WASD - Move XZ
Space - Jump
Q/E - Move W (4th dimension)

Mouse - Look around
Left Click - Lower dimension (4D→3D→2D→1D)
Right Click - Raise dimension (1D→2D→3D→4D)

ESC - Toggle mouse capture
R - Reset position"

[node name="LevelManager" type="Node" parent="."]
script = ExtResource("10_24ks5")
level_name = "Level 2"
metadata/_custom_type_script = "uid://co36lml6hwiel"

[node name="LevelUI" parent="." instance=ExtResource("11_s4es8")]

[connection signal="dimension_switch" from="objects/Player_4d" to="LevelManager" method="_on_player_4d_dimension_switch"]
[connection signal="light" from="objects/Player_4d" to="DirectionalLight3D" method="_on_player_4d_light"]
